# OpenS

./: .gitignore  README.md  controller.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  calculator.md  index.md
docs/example_report/: index.html
my_report/: index.html
scripts/: generate_example_report.py  generate_screenshot.py  setup_xyce.sh
site/: 404.html  index.html  objects.inv  search.json
site/api/: index.html
site/calculator/: index.html
site/search/: search_index.json
src/opens/: __main__.py  analysis_widget.py  calculator_widget.py  commands.py  design_script_dialog.py  main_window.py  model_editor.py  netlister.py  outputs_widget.py  pcell.py  plugin_manager.py  properties_widget.py  results_selection_widget.py  schematic_item.py  spice_parser.py  symbol_editor.py  symbol_generator.py  theme.py  variables_widget.py  wire.py  xyce_runner.py
src/opens/plugins/: analysis_plugin.py  calculator_plugin.py  library_plugin.py  outputs_plugin.py  properties_plugin.py  results_selection_plugin.py  (+3 more)
src/opens_suite/: __init__.py  __main__.py  analysis_widget.py  calculator_widget.py  commands.py  design_points.py  design_script_dialog.py  library.py  main_window.py  netlister.py  outputs_widget.py  plugin_manager.py  properties_widget.py  results_selection_widget.py  schematic_item.py  schematic_view.py  symbol_editor.py  syntax_highlighter.py  waveform_viewer.py  wire.py  xyce_runner.py  xyce_updater.py
tests/: test_dc_report.py  test_netlister.py  test_simulation.py  test_stimuli.py
tests/simulation/: dc_sim.net
(+33 files in other folders)
