[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opens-suite"
version = "0.0.1"
description = "A PyQt6 application for Schematic Entry"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "PyQt6>=6.5.0",
    "numpy",
    "matplotlib",
    "pyqtgraph>=0.13.3",
]

[project.scripts]
opens = "opens.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opens"]
