[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opens-suite"
version = "0.0.1"
description = "A PyQt6 application for Schematic Entry"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "PyQt6>=6.5.0",
    "numpy",
    "matplotlib",
    "pyqtgraph>=0.13.3",
]

[project.scripts]
opens = "opens_suite.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opens_suite"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.3",
    "mkdocstrings[python]>=0.26.1",
    "pylint>=3.2.7",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
